RESOLVED FIXED180273
WebAssembly: stack trace improvement follow-ups
https://bugs.webkit.org/show_bug.cgi?id=180273
Summary WebAssembly: stack trace improvement follow-ups
JF Bastien
Reported 2017-12-01 13:08:10 PST
Follow-up on comments after #179343 got committed.
Attachments
patch (4.46 KB, patch)
2017-12-01 13:09 PST, JF Bastien
saam: review+
saam: commit-queue-
patch (4.52 KB, patch)
2017-12-01 13:45 PST, JF Bastien
no flags
JF Bastien
Comment 1 2017-12-01 13:09:55 PST
Saam Barati
Comment 2 2017-12-01 13:34:22 PST
Comment on attachment 328142 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=328142&action=review > Source/JavaScriptCore/wasm/WasmNameSection.h:53 > + WTF_MAKE_NONCOPYABLE(NameSection); We usually put this at the very top of classes/structs.
JF Bastien
Comment 3 2017-12-01 13:45:44 PST
WebKit Commit Bot
Comment 4 2017-12-01 14:19:08 PST
Comment on attachment 328150 [details] patch Clearing flags on attachment: 328150 Committed r225416: <https://trac.webkit.org/changeset/225416>
WebKit Commit Bot
Comment 5 2017-12-01 14:19:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2017-12-01 14:21:07 PST
Note You need to log in before you can comment on or make changes to this bug.