WebAssembly: stack trace improvement follow-ups https://bugs.webkit.org/show_bug.cgi?id=180273

Reviewed by Saam Barati.

* wasm/WasmIndexOrName.cpp:
(JSC::Wasm::makeString):
* wasm/WasmIndexOrName.h:
(JSC::Wasm::IndexOrName::nameSection const):
* wasm/WasmNameSection.h:
(JSC::Wasm::NameSection::NameSection):
(JSC::Wasm::NameSection::get):


Canonical link: https://commits.webkit.org/196265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225416 268f45cc-cd09-0410-ab3c-d52691b4dbfc