Source/JavaScriptCore/wasm/WasmIndexOrName.cpp
@@ -46,11 +46,11 @@ IndexOrName::IndexOrName(Index index, std::pair<const Name*, RefPtr<NameSection>
 String makeString(const IndexOrName& ion)
 {
     if (ion.isEmpty())
-        return String("wasm-stub");
+        return ASCIILiteral("wasm-stub");
     const String moduleName = ion.nameSection()->moduleName.size() ? String(ion.nameSection()->moduleName.data(), ion.nameSection()->moduleName.size()) : String(ion.nameSection()->moduleHash.data(), ion.nameSection()->moduleHash.size());
     if (ion.isIndex())
-        return makeString(moduleName, ".wasm-function[", String::number(ion.m_indexName.index & ~IndexOrName::indexTag), "]");
-    return makeString(moduleName, ".wasm-function[", String(ion.m_indexName.name->data(), ion.m_indexName.name->size()), "]");
+        return makeString(moduleName, ".wasm-function[", String::number(ion.m_indexName.index & ~IndexOrName::indexTag), ']');
+    return makeString(moduleName, ".wasm-function[", String(ion.m_indexName.name->data(), ion.m_indexName.name->size()), ']');
 }
 
 } } // namespace JSC::Wasm
